# tolteca_db

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/tolteca_db/: __init__.py  __main__.py  constants.py
src/tolteca_db/api/: __init__.py  obs.py
src/tolteca_db/associations/: __init__.py  base.py  collators.py  generator.py  pool.py  state.py
src/tolteca_db/cli/: __init__.py  assoc_commands.py  commands.py  dagster_commands.py  dash_commands.py  db_commands.py  ingest_commands.py  query_commands.py
src/tolteca_db/dagster/: __init__.py  assets.py  definitions.py  helpers.py  partitions.py  resources.py  sensors.py  test_assets.py  test_resources.py
src/tolteca_db/dagster_per_interface_experiment/: TEST_MODE.md  __init__.py  assets.py  definitions.py  helpers.py  partitions.py  resources.py  sensors.py  test_resources.py
src/tolteca_db/dash/: README.md  __init__.py  app.py  viewer.py  viewer_old.py
src/tolteca_db/db/: __init__.py  config.py  database.py  parquet.py  registry.py  repository.py
src/tolteca_db/ingest/: __init__.py  file_scanner.py  ingest.py  lmtmc_api.py  netcdf_to_parquet.py  tel_csv_parser.py  tel_ingestor.py
src/tolteca_db/io/: __init__.py  fits.py  netcdf.py
src/tolteca_db/models/: __init__.py  metadata.py  orm.py  schemas.py
src/tolteca_db/models/orm/: __init__.py  assoc.py  base.py  data_prod.py  event.py  flag.py  source.py  task.py
src/tolteca_db/query/: parquet_orm_query.py
src/tolteca_db/repository/: __init__.py  file_api.py
src/tolteca_db/services/: __init__.py  ingest.py  scanner.py
src/tolteca_db/utils/: __init__.py  db.py  filename.py  hashing.py  mapped_types.py  time.py  uid.py
tests/: __init__.py  conftest.py  test_enhancements.py  test_file_api.py  test_hybrid_basic.py  test_hybrid_database.py  test_invalid_partition_prevention.py  test_obsspec_parser.py  test_orm_models.py  test_parquet_orm_query_refactored.py  test_quartet_completion_detection.py  test_schemas.py  test_tolteca_db.py
tests/fixtures/: README.md  __init__.py  extract_sample_data.py
tests/test_dagster/: __init__.py  conftest.py  test_acquisition_simulation.py  test_asset_metadata.py  test_assets.py  test_helpers.py  test_helpers_unit.py  test_integration_real_db.py  test_interface_helpers.py  test_partitions.py  test_resources.py  test_sensors.py  test_simulator.py  test_validation_scenarios.py
