[project]
name = "tolteca_db"
dynamic = ["version"]
description = "Data product database for TolTEC."
readme = "README.md"
authors = [{ name = "Zhiyuan Ma", email = "zhiyuanma@umass.edu" }]
maintainers = [{ name = "Zhiyuan Ma", email = "zhiyuanma@umass.edu" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">= 3.12"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "typer>=0.20.0",
  "sqlalchemy>=2.0.44",
  "blake3>=1.0.8",
  "alembic>=1.14.0",
  "pydantic>=2.12.0",
  "adaptix>=3.0.0b11",
  "duckdb>=1.0.0",
  "duckdb-engine>=0.13.0",
  "pyarrow>=18.0.0",
  "pandas>=2.0.0",
  "loguru>=0.7.0",
  "dagster>=1.5.0",
  "dagster-webserver>=1.5.0",
  "tenacity>=8.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]

dash = ["dash>=2.14.0", "dash-mantine-components>=0.12.0", "plotly>=5.18.0"]

test = [
  "pytest>=8.0",
  "pytest-doctestplus",
  "pytest-remotedata",
  "pytest-benchmark",
  "coverage",
  "ruff>=0.14.0",
]

dev = [
  "tolteca_db[test]",
  "pre-commit",
  "ty",
  "pandas-stubs",
  "narwhals",
  "ipdb",
  "myst-parser",
  "sphinx",
  "sphinx-astropy[confv2]",
  "sphinx-copybutton",
  "sphinx_book_theme",
  "autodoc_pydantic[erdantic]",
  "mkdocs",
]

[project.urls]
bugs = "https://github.com/toltec-astro/tolteca_db/issues"
homepage = "https://github.com/toltec-astro/tolteca_db"

[project.scripts]
tolteca_db = "tolteca_db.cli:app"

[build-system]
requires = ["setuptools>=80", "setuptools_scm>=8"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "data/*",
  "data/*/*",
  "data/*/*/*",
  "data/*/*/*/*",
  "data/*/*/*/*/*",
  "data/*/*/*/*/*/*",
]

[tool.setuptools_scm]
version_file = "src/tolteca_db/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "docs"]
norecursedirs = [".*", "docs[\\/]_build", "docs[\\/]generated"]
doctest_plus = "enabled"
text_file_format = "rst"
remote_data_strict = true
addopts = [
  "-ra",
  "--color=yes",
  "--doctest-rst",
  "--strict-config",
  "--strict-markers",
  "-p no:legacypath",
]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
  # Treat all warnings as errors for strict testing
  "error",
  # Temporarily allow SQLAlchemy deprecation warnings (auto-table-comments feature needs update)
  "ignore::sqlalchemy.exc.SADeprecationWarning",
  # Temporarily allow Pydantic deprecation warnings from dagster (upstream issue)
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  # Allow Dagster beta warnings for MultiToSingleDimensionPartitionMapping
  "ignore::dagster_shared.utils.warnings.BetaWarning",
]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.src]
exclude = ["docs/conf.py"]

[tool.ruff]
line-length = 88
exclude = ["src/tolteca_db/_version.py"]
lint.select = ["ALL"]
lint.ignore = [
  # flake8-builtins (A) : shadowing a Python built-in.
  # New ones should be avoided and is up to maintainers to enforce.
  "A00",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
  "D",      # pydocstyle
  "ERA001", # commented out code
]

"docs/conf.py" = [
  "D",      # pydocstyle
  "ERA001", # commented out code
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.repo-review]
ignore = [
  "PY007", # ignore task runner
  "PC111", # ignore blacken-docs
  "PC140", # ignore type checker
  "PC180", # ignore markdown formatter
  "PC901", # ignore custom update message
  "MY",    # ignore mypy
  "RTD",   # ignore RTD
  "SCFG",  # ignore setup.cfg
]

[tool.uv]
package = true
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]

[tool.cruft]
skip = [".git"]

[tool.dagster]
module_name = "tolteca_db.dagster.definitions"
